--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,8 +338,105 @@ a {
 
 
 /* foooter csss */
-.footer .footer-f {
+.footer .first-f {
     background-color: rgb(225, 232, 240);
+}
+
+.footer .footer-logo img {
+    width: 100%
+}
+
+.first-f .our-awards img {
+    width: 100%;
+}
+
+.first-f {
+    padding: 50px 0;
+}
+
+.first-f .wrap {
+    max-width: 1200px;
+    margin: auto;
+}
+
+.first-f .about-denticare .grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 15px;
+}
+
+.about-denticare .grid a {
+    color: black;
+}
+
+.footer .footer-logo {
+    max-width: 150px;
+}
+
+.first-f .social-net span {
+    position: relative;
+    width: 30px;
+    overflow: hidden;
+    height: 30px;
+    font-size: 15px;
+    border-radius: 50%;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transition: color .6s ease-in;
+}
+
+.first-f .social-net span:hover::before {
+    transform: scale(2.2);
+}
+
+.first-f .social-net span:hover {
+    color: rgb(16, 64, 153);
+}
+
+.first-f .social-net span:hover::after {
+    transform: scale(1.1);
+}
+
+.first-f .social-net a {
+    margin: 0 5px;
+}
+
+.first-f .social-net span::after {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    background-color: white;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transform: scale(0);
+    border-radius: 50%;
+    height: 100%;
+    z-index: -1;
+    transition: transform .6s ease-in;
+
+}
+
+.first-f .social-net span::before {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    background-color: rgb(16, 64, 153);
+    top: 0;
+    left: 0;
+    width: 100%;
+    border-radius: 50%;
+    height: 100%;
+    transition: transform .6s ease-in;
+}
+
+.footer .first-f .main-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 40px;
 }
 
 .footer-s .grid {
