--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,13 @@ button {
     margin: auto;
 }
 
+.sm-top-icons {
+    display: none;
+    order: 4;
+    background-color: #00af89;
+}
+
+
 .top-nav {
     padding: 5px 15px;
     background-color: #00af89;
@@ -113,9 +120,44 @@ button {
     color: #117964;
 }
 
+.navbar .icon-items {
+    display: flex;
+}
+
 @media (max-width: 768px) {
     .navbar {
         opacity: 0.95;
+    }
+
+    .top-nav {
+        display: none;
+    }
+
+    .sm-top-icons {
+        display: block;
+        position: relative;
+        overflow: hidden;
+        padding: 20px 0;
+        color: white;
+    }
+
+    .sm-top-icons p {
+        color: rgba(255, 255, 255, .5);
+    }
+
+    .sm-top-icons button {
+        padding: 0.875em 1em;
+        background-color: #104099;
+        color: white;
+    }
+
+    .sm-top-icons::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
 
     .navbar .main-links {
@@ -188,6 +230,22 @@ button {
         transition: transform 0.3s ease-in-out;
     }
 
+    .navbar .main-links li {
+        margin-left: 0;
+    }
+
+    .navbar .main-links {
+        padding-left: 0;
+        text-align: center;
+    }
+
+    .navbar .icon-items {
+        padding-left: 0;
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+    }
+
     .navbar .menu-items {
         padding-top: 100px;
         background: #fff;
@@ -196,8 +254,8 @@ button {
         transform: translate(-150%);
         display: flex;
         flex-direction: column;
-        margin-left: -40px;
-        padding-left: 40px;
+        margin-left: -46px;
+        /* padding-left: 40px; */
         transition: transform 0.5s ease-in-out;
         box-shadow: 5px 0px 10px 0px #aaa;
         overflow: scroll;
