--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,226 +72,48 @@ button {
     margin: 0 3px;
 }
 
-.navbar {
-    /* box-shadow: 0px 5px 10px 0px #aaa; */
-    /* position: fixed;
-    width: 100%; */
-    background: inherit;
-    position: relative;
-    z-index: 100;
-    color: #000;
-    /* opacity: 0.85; */
-    z-index: 100;
-}
-
-.navbar-container {
-    display: flex;
-    justify-content: space-between;
-    height: 64px;
-    align-items: center;
-}
-
-.menu-items {
-    order: 2;
-    display: flex;
-}
-
-.logo {
-    order: 1;
-    font-size: 2.3rem;
-}
-
-.menu-items li {
-    list-style: none;
-    margin-left: 1.5rem;
-    font-size: 1.3rem;
-}
-
-.navbar a {
-    color: white;
-    text-decoration: none;
-    font-weight: 500;
-    transition: color 0.3s ease-in-out;
-}
-
-.navbar .logo img {
-    width: 126px;
-}
-
-.navbar a:hover {
-    color: #117964;
-}
-
-.navbar .icon-items {
-    display: flex;
-}
-
-@media (max-width: 768px) {
-    .navbar {
-        opacity: 0.95;
-    }
-
+@media all and (max-width:991px) {
     .top-nav {
         display: none;
     }
+}
 
-    .sm-top-icons {
-        display: block;
-        position: relative;
-        overflow: hidden;
-        padding: 20px 0;
-        color: white;
-    }
+.main-navbar .wrap {
+    max-width: 1200px;
+    margin: auto;
+}
 
-    .sm-top-icons p {
-        color: rgba(255, 255, 255, .5);
-    }
+.main-navbar .nav-link {
+    color: white;
+}
 
-    .sm-top-icons button {
-        padding: 0.875em 1em;
-        background-color: #104099;
-        color: white;
-    }
+.navbar {
+    z-index: 100;
+    padding-top: 0;
+    padding-bottom: 0;
+}
 
-    .sm-top-icons::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
+.navbar .navbar-brand img {
+    width: 126px;
+}
 
-    .navbar .main-links {
-        flex-direction: column;
-    }
+.navbar .icon-items {
+    list-style: none;
+    padding-left: 0;
+    display: flex;
+}
 
-    .navbar .menu-items.icon-items {
-        transform: translateY(0);
-        padding: 0;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
+.navbar .icon-items li {
+    margin: 0 3px;
+}
 
-    .navbar-container input[type="checkbox"],
-    .navbar-container .hamburger-lines {
-        display: block;
-    }
+.navbar .icon-items li a {
+    color: #fff;
+    transition: all .3s ease-in;
+}
 
-    .navbar-container {
-        display: block;
-        position: relative;
-        height: 64px;
-    }
-
-    .navbar-container input[type="checkbox"] {
-        position: absolute;
-        display: block;
-        height: 32px;
-        width: 30px;
-        top: 20px;
-        left: 20px;
-        z-index: 5;
-        opacity: 0;
-        cursor: pointer;
-    }
-
-    .navbar-container .hamburger-lines {
-        display: block;
-        height: 28px;
-        width: 35px;
-        position: absolute;
-        top: 20px;
-        left: 20px;
-        z-index: 2;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    .navbar-container .hamburger-lines .line {
-        display: block;
-        height: 4px;
-        width: 100%;
-        border-radius: 10px;
-        background: #333;
-    }
-
-    .navbar-container .hamburger-lines .line1 {
-        transform-origin: 0% 0%;
-        transition: transform 0.3s ease-in-out;
-    }
-
-    .navbar-container .hamburger-lines .line2 {
-        transition: transform 0.2s ease-in-out;
-    }
-
-    .navbar-container .hamburger-lines .line3 {
-        transform-origin: 0% 100%;
-        transition: transform 0.3s ease-in-out;
-    }
-
-    .navbar .main-links li {
-        margin-left: 0;
-    }
-
-    .navbar .main-links {
-        padding-left: 0;
-        text-align: center;
-    }
-
-    .navbar .icon-items {
-        padding-left: 0;
-        display: flex;
-        justify-content: center;
-        flex-direction: row;
-    }
-
-    .navbar .menu-items {
-        padding-top: 100px;
-        background: #fff;
-        height: 100vh;
-        max-width: 300px;
-        transform: translate(-150%);
-        display: flex;
-        flex-direction: column;
-        margin-left: -46px;
-        /* padding-left: 40px; */
-        transition: transform 0.5s ease-in-out;
-        box-shadow: 5px 0px 10px 0px #aaa;
-        overflow: scroll;
-    }
-
-    .navbar .menu-items li {
-        margin-bottom: 1.8rem;
-        font-size: 1.1rem;
-        font-weight: 500;
-    }
-
-    .logo {
-        position: absolute;
-        top: 10px;
-        right: 15px;
-        font-size: 2.5rem;
-    }
-
-    .navbar-container input[type="checkbox"]:checked~.menu-items {
-        transform: translateX(0);
-    }
-
-    .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line1 {
-        transform: rotate(45deg);
-    }
-
-    .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line2 {
-        transform: scaleY(0);
-    }
-
-    .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line3 {
-        transform: rotate(-45deg);
-    }
-
+.navbar .icon-items li a:hover {
+    color: #00af89;
 }
 
 .dropdown-tog {
